tests/baselines/reference/parserIndexSignature6.errors.txt
parserIndexSignature6.ts(2,4): error TS1268: An index signature parameter type must be 'string', 'number', 'symbol', or a template literal type.


==== parserIndexSignature6.ts (1 errors) ====
    interface I {
      [a:boolean]
       ~
!!! error TS1268: An index signature parameter type must be 'string', 'number', 'symbol', or a template literal type.
    }